[package]
name = "inpolygon"
version = "0.1.0"
authors = ["mvonlanthen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "inpolygon"
path = "src/lib.rs"

[[bin]]
name = "inpolygon"
path = "src/bin.rs"

[dependencies]
ndarray = "0.13"
