[package]
name = "inpolygon"
version = "0.3.0"
authors = ["mvonlanthen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "inpolygon"
path = "src/lib.rs"

# to also compile the bin, which is just a sandbox and benchmark place.
# [[bin]]
# name = "inpolygon"
# path = "src/bin.rs"

[dependencies]
# ndarray = "0.13"
ndarray-rand = "0.11.0"

[dependencies.ndarray]
version = "0.13"
features = ["rayon"]
